@@ -430,6 +430,8 @@ Boston, MA  02110-1301, USA.
 #define ID_TELETEXTFILES                40291
 #define ID_TELETEXTLOCALHOST            40292
 #define ID_TELETEXTCUSTOM               40293
+#define ID_VIEW_DD_2560X1440            40294
+#define ID_VIEW_DD_3840X2160            40295
 #define IDC_STATIC                      -1
 
 // Next default values for new objects
@@ -438,7 +440,7 @@ Boston, MA  02110-1301, USA.
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NO_MFC                     1
 #define _APS_NEXT_RESOURCE_VALUE        117
-#define _APS_NEXT_COMMAND_VALUE         40291
+#define _APS_NEXT_COMMAND_VALUE         40293
 #define _APS_NEXT_CONTROL_VALUE         1087
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
