@@ -34,6 +34,13 @@ Richard Broadhurst, J.G.Harston, Mike Wyatt, Alistair Cree)
 * Release Shift key on disk read after auto-booting.
 * Rework teletext adapter emulation and add support for real-time packet streams.
 * Fixed reads from CRTC and Video ULA registers.
+* Added new DX video modes for full-screen (1440p and 4K).
+* Fixed issue where BeebEm would always use the primary monitor when going 
+  fullscreen.
+  - Now uses monitor on which the BeebEm window is positioned.  As with all
+    DX9 applications, this works best when "Maintain Desktop Resolultion" is
+    selected.
+* Changed the default fullscreen resolution to "Maintain Desktop Resolution".
 
 Version 4.14 (J.G.Harston, Steve Pick, Mike Wyatt)
 ------------
